[project]
name = "ASReview-NEMO"
description = "ASReview New Exciting Models"
readme = "README.md"
authors = [
    { name = "ASReview LAB developers", email = "asreview@uu.nl" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
keywords = ["systematic review"]
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "asreview>=2.0b3",
    "gensim>=4.3.3",
    "keras>=3.8.0",
    "numpy>=1.26.4",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=3.4.1",
    "accelerate>=1.0.0",
    "torch>=2.1.0",
    "xgboost>=2.1.4",
]

[project.urls]
Issues = "https://github.com/asreview/asreview-nemo/issues"
Repository = "https://github.com/asreview/asreview-nemo/"

[build-system]
build-backend = 'setuptools.build_meta'
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[tool.setuptools]
packages = ["asreviewcontrib", "asreviewcontrib.nemo", "asreviewcontrib.nemo.classifiers", "asreviewcontrib.nemo.feature_extractors"]

[tool.setuptools_scm]
write_to = "asreviewcontrib/nemo/_version.py"

[project.entry-points."asreview.models.classifiers"]
"adaboost" = "asreviewcontrib.nemo.classifiers.adaboost:AdaBoost"
"dynamic-nn" = "asreviewcontrib.nemo.classifiers.neural_networks:DynamicNNClassifier"
"nn-2-layer" = "asreviewcontrib.nemo.classifiers.neural_networks:NN2LayerClassifier"
"warmstart-nn" = "asreviewcontrib.nemo.classifiers.neural_networks:WarmStartNNClassifier"
"xgboost" = "asreviewcontrib.nemo.classifiers.xgboost:XGBoost"
"scaled-nb" = "asreviewcontrib.nemo.classifiers.scaled_nb:ScaledNaiveBayes"

[project.entry-points."asreview.models.feature_extractors"]
"doc2vec" = "asreviewcontrib.nemo.feature_extractors.doc2vec:Doc2VecWrapper"
"sbert" = "asreviewcontrib.nemo.feature_extractors.sentence_transformers:SBERT"
"mxbai" = "asreviewcontrib.nemo.feature_extractors.sentence_transformers:MXBAI"
"labse" = "asreviewcontrib.nemo.feature_extractors.sentence_transformers:LaBSE"
"multilingual-e5-large" = "asreviewcontrib.nemo.feature_extractors.sentence_transformers:MultilingualE5Large"
"gtr-t5-large" = "asreviewcontrib.nemo.feature_extractors.sentence_transformers:GTR"

[project.entry-points."asreview.entry_points"]
nemo = "asreviewcontrib.nemo.entrypoint:NemoEntryPoint"

[tool.ruff]
select = ["E", "F", "UP", "B"]

[tool.ruff.isort]
force-single-line = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
